Reverting back to sample names bc shit wasn't working.
it's working now, will mess with filenames later.

--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
     <!-- load our react component -->
 
     <script src="header.js" defer type="text/babel"></script>
-    <script src="leftEnterTask.js" defer type="text/babel"></script>
-    <script src="stickerboard.js" defer type="text/babel"></script>
-    <script src="rightSuccessCalendar.js" defer type="text/babel"></script>
-    <script src="rightSuccessCalendar.js" defer type="text/babel"></script>
+    <script src="left.js" defer type="text/babel"></script>
+    <script src="article.js" defer type="text/babel"></script>
+    <script src="right.js" defer type="text/babel"></script>
     <script src="footer.js" defer type="text/babel"></script>
     <script src="index.js" defer type="text/babel"></script>
 
